software funcionando, versao inicial precisa de melhorias: 1. Melhor calculo de pooling para scan de rede.\n 2. Armazenamento de data de primeira detecção.\n 3. Controle de snapshots via CLI (parecido com git).\n 4. Implementação de scan via SNMP.\n 5. Implementação de MIB para controle do software.\n 6. Integracao com Mininet para criar a estrutura de rede no simulador.\n 7. Integração para a estrutura de rede ser atualizada em tempo real.\n\n

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ mac-vendor-lookup~=0.1.12
 # Para futuras implementações de cliente e agente SNMP, conforme especificação.
 # A versão 4.4.12 é estável e amplamente utilizada na comunidade.
 pysnmp~=4.4.12
+
+requests~=2.31.0
