feat: adiciona script gerador de oui_db.py e integração no Makefile
- Adiciona script Mac-Fabricante/gerar_dicionario_json.py para gerar banco OUI
- Cria target 'make generate-oui' no Makefile para facilitar geração
- Documenta processo de geração no README.md com exemplos
- Atualiza .gitignore para incluir script mas ignorar mac-vendors.json (muito grande)
- Estrutura do projeto agora inclui geração automatizada do banco de fabricantes

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,10 @@ status.json
 # Dicionário OUI gerado (arquivo grande)
 oui_db.py
 
-# Arquivos utilizados para gerar o arquivo oui_db.py
-Mac-Fabricante/
+# Arquivos JSON muito grandes (fonte do oui_db.py)
+# NOTA: O script gerar_dicionario_json.py DEVE estar no repositório
+Mac-Fabricante/mac-vendors.json
 
 # Logs
 *.log
 discovery.log
-
